--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,10 @@
 /dist
+/src-bex/www
 /src-capacitor
 /src-cordova
 /.quasar
 /node_modules
 .eslintrc.cjs
 /quasar.config.*.temporary.compiled*
+.eslintrc.js
+babel.config.js
